--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "firebase": "^9.6.6",
+    "moment": "^2.29.1",
+    "sass": "^1.49.9",
     "vue": "^3.2.29"
   },
   "devDependencies": {
